fixed alignment of loading text

--- a/client/src/Pages/initAdminPage/index.css
+++ b/client/src/Pages/initAdminPage/index.css
@@ -1,3 +1,7 @@
+.loading {
+  text-align: center;
+}
+
 #buttons2, #npcButton {
   display: flex;
   justify-content: space-between;
